# qubo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  refactor_notes.txt  rosconsole.conf  todo.org
drivers/: CMakeLists.txt
drivers/ahrs/: Makefile
drivers/ahrs/src/: AHRS.cpp  util.cpp
drivers/dvl/: Makefile
drivers/dvl/src/: baudrate.cpp  test.cpp
drivers/tortuga/include/: dvlapi.h
drivers/tortuga/src/: imuapi.c  lcdshow.c  sensorapi.c
src/autonomy/: CMakeLists.txt  autonomy_node.py  bagfile-_qubo_depth.csv  export.sh  package.xml  service_test.py  subset.bag  vision_client.py  vision_states.py  vision_test.py  vision_test_action.py
src/autonomy/src/: autonomy_node.py  service_test.py  test_movement_command.py  vision_test_action.py
src/controls/: CMakeLists.txt  controller.slx  package.xml  qubo_controller.slx
src/controls/angular_controller/include/: rotational_controller.h
src/controls/angular_controller/src/: main.cpp  rotational_controller.cpp
src/controls/cfg/: depth_yaw.cfg  pid.cfg
src/controls/controller/include/: controller_core.h
src/controls/controller/src/: controller_node.cpp  main.cpp
src/controls/include/: depth_controller.h  depth_pid_controller.h  kalman_filter.h  pid_controller.h  rot_controller.h  yaw_controller.h
src/controls/movement/src/: main.cpp  movement.cpp
src/controls/src/: PIDController.cpp  depth_controller.cpp  depth_controller.py  depth_main.cpp  depth_pid_controller.cpp  kalman_filter.cpp  kalman_filter_node.cpp  kevin_controller.cpp  notes.txt  pid_controller.cpp  pid_controller_node.cpp  pid_main.cpp  rot_controller.cpp  rot_main.cpp  yaw_controller.cpp  yaw_main.cpp
src/controls/tests/: tortuga.launch
src/controls/translational_controller/include/: translational_controller.h
src/controls/translational_controller/src/: linear_controller.cpp  main.cpp
src/joystick/: CMakeLists.txt  package.xml
src/joystick/src/: joy_reader.cpp
src/qubo_vl/: CMakeLists.txt  package.xml
src/ram_cpp_utils/: CMakeLists.txt  package.xml
src/ram_cpp_utils/math/src/: Conversion.cpp
src/ram_cpp_utils/test/: ConversionTests.cpp
src/ram_msgs/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/ram_msgs/action/: VisionExample.action
src/ram_msgs/msg/: Buoys.msg  DVL.msg  DVL_qubo.msg  Matrix2.msg  Matrix4.msg  Quaternion.msg  Sim_Power_Source.msg  Status.msg
src/ram_msgs/srv/: sonar_data.srv
src/teleop/: CMakeLists.txt  package.xml
src/teleop/include/: joy_reader.h  open_loop_teleop.h
src/teleop/src/: game_controller.py  keyboard_controller.py  main.cpp  nes_controller.py  new_joystick.py  no_ros_new_joystick.py  open_loop_teleop.cpp  teleop.cpp
src/tortuga_vl/: CMakeLists.txt  package.xml
src/tortuga_vl/dvl/src/: main.cpp
src/tortuga_vl/imu/src/: main.cpp
src/tortuga_vl/sensor_board/include/: sonar_server.h
src/tortuga_vl/sensor_board/src/: main.cpp  temp_tortuga.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/include/: blob_action.h  buoy_action.h  buoy_tuner.h  find_buoy_action.h  gate_action.h  gpu_vision_node.h  sim_vision_node.h  vision_node.h  vision_node_debug.h
src/vision/src/: DisplayEdges.cpp  Test.cpp  blob_detection.cpp  example_server.cpp  find_buoy_action.cpp  gate_action.cpp  gpu_main.cpp  gpu_vision_node.cpp  image_converter.cpp  main.cpp  my_publisher.cpp  my_subscriber.cpp  sim_main.cpp  sim_vision_node.cpp  test.cpp  vision.cpp  vision_node.cpp  vision_server.py  vision_test.py  vision_test_blob_detection.py
src/vision/src/SoulSpear/UNet/: load.py  test.py  train.py
src/vision/src/SoulSpear/YOLO/: TODO  detect.py  detect2.py  train.py
src/vision/src/SoulSpear/utils/: extract.py
src/vision/src/actions/: blob_action.cpp  buoy_action.cpp  gate_action.cpp
src/vision/src/cascades/: CascadeTest.cpp
src/vision/src/cascades/Training/: buoy_bad.txt  buoy_positives.txt  buoy_positives_mk4.txt
src/vision/src/prototypes/: blob.cpp  blob_test2.py  edge_detection.cpp  em.cpp  g_fit.cpp  gate_detection.py  gate_detector.cpp  mbt.cpp  mog.cpp  ref.txt  segmentation.cpp  vision_test_blob_detection.py
src/vision/src/prototypes/old/: ref.txt
src/vision/src/tuners/: blob_tuner.cpp  buoy_tuner  buoy_tuner.cpp  canny_tuner.cpp  find_lines.py  gate_tuner.cpp  inspect_image.py  mog_tuner.cpp  test.py  version.py
src/vision/src/tuners/DQNplayground/: DQN.py  deepseadb.py  env_judge.py  env_player.py  (+7 more)
src/vision/srv/: GYM_Apply_Action.srv  GYM_Req_Observe.srv  GYM_Req_Reset.srv  Gate_Detection.srv
src/vl_qubo/: CMakeLists.txt  calib.py  comms.py  package.xml  rosconsole.conf
src/vl_qubo/ahrs/include/: ahrs_qubo.h
src/vl_qubo/ahrs/src/: ahrs_qubo.cpp  main.cpp
src/vl_qubo/drivers/: qubobus
src/vl_qubo/drivers/qscu/: README
src/vl_qubo/dvl/include/: dvl_qubo.h
src/vl_qubo/dvl/src/: dvl_qubo.cpp  main.cpp
src/vl_qubo/include/: ahrs_node.h  control_node.h  dvl_qubo.h  g_control_node.h  gazebo_hardware_node.h  hardware_node.h  qubo_node.h  ram_node.h
src/vl_qubo/src/: ahrs_main.cpp  ahrs_node.cpp  arduino_node.py  comms.py  control_node.cpp  dvl_main.cpp  dvl_node.cpp  g_control_node.cpp  g_main.cpp  gazebo_hardware_node.cpp  gazebo_main.cpp  hardware_node.cpp  hardware_node_main.cpp  main.cpp  servicetest.py
src/vl_qubo_gazebo/: CMakeLists.txt  models  package.xml
src/vl_qubo_gazebo/include/: gazebo_camera_node.h  gazebo_hardware_node.h
src/vl_qubo_gazebo/models_data/simple_gate/: Gate.stl  model.config  model.sdf
src/vl_qubo_gazebo/src/: camera_node.cpp  gazebo_camera_main.cpp  gazebo_camera_node.cpp  gazebo_hardware_node.cpp
src/vl_qubo_gazebo/urdf/: basic_qubo.xacro  mesh_qubo.xacro
src/vl_qubo_gazebo/world/: basic_qubo_underwater.launch  buoy.dae  empty_underwater_world.launch  my_mesh.world  untitled.dae
src/vl_tortuga/: CMakeLists.txt  package.xml
src/vl_tortuga/drivers/src/: imuapi.c  lcdshow.c
src/vl_tortuga/dvl/include/: dvl_tortuga.h
src/vl_tortuga/imu/src/: imu_tortuga.cpp
src/vl_tortuga/sensor_board/include/: depth_tortuga.h  sonar_client.h  thruster_tortuga.h
src/vl_tortuga/sensor_board/src/: depth_tortuga.cpp
(+6897 files in other folders)
