<?xml version="1.0"?>
<package>
  <name>qubo_vl</name>
  <version>0.1.0</version>
  <description>vehicle layer for the AUV qubo</description>
  <author email="software@ram.umd.edu">Robotics @ Maryland</author>
  <maintainer email="software@ram.umd.edu">Robotics @ Maryland</maintainer>

  <license>GPL</license>

  <url>http://ram.umd.edu</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
