<?xml version="1.0"?>
<package>
  <name>ram_cpp_utils</name>
  <version>0.1.0</version>
  <description>Common Utilities for R@M C++ Packages</description>
  <author email="software@ram.umd.edu">Robotics @ Maryland</author>
  <maintainer email="software@ram.umd.edu">Robotics @ Maryland</maintainer>

  <license>GPL</license>

  <url>http://ram.umd.edu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  
  <build_depend>ram_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>ram_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
</package>
