<package>
  <name>ram_msgs</name>
  <version>0.1.0</version>
  <description>Common Messages for R@M Packages</description>
  <author email="software@ram.umd.edu">Robotics @ Maryland</author>
  <maintainer email="software@ram.umd.edu">Robotics @ Maryland</maintainer>

  <license>GPL</license>

  <url>http://ram.umd.edu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>  

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
